tests/ui/rfcs/rfc-2126-extern-absolute-paths/non-existent-1.stderr
error[E0432]: unresolved import `xcrate`
  --> $DIR/non-existent-1.rs:3:5
   |
LL | use xcrate::S;
   |     ^^^^^^ use of unresolved module or unlinked crate `xcrate`
   |
   = help: if you wanted to use a crate named `xcrate`, use `cargo add xcrate` to add it to your `Cargo.toml`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
